Updated documentation to fix broken links and remediate issues related to accessibility including alt text for images and heading structures.

--- a/mkdocs-project/docs/Introduction/2.md
+++ b/mkdocs-project/docs/Introduction/2.md
@@ -54,9 +54,9 @@ which allows variable efficiency, soil moisture accounting and immediate (curren
 * **Call Reporting**. Estimates the calling structure and calling right.
 
 * **Graphical User Interface (GUI)**. Includes a comprehensive GUI that allows input data to be viewed, edited, and graphed; output data to be viewed 
-and graphed; map based depiction of basin, hydrology, structure locations, etc. See the [CDSS website](https://www.colorado.gov/cdss) for more information on this tool.
+and graphed; map based depiction of basin, hydrology, structure locations, etc. See the [CDSS website](https://cdss.colorado.gov/) for more information on this tool.
 
-* **Data Centered Approach**. The entire system operates as a data centered component with a direct link the CDSS database ([HydroBase](https://www.colorado.gov/pacific/cdss/hydrobase)). By providing a 
+* **Data Centered Approach**. The entire system operates as a data centered component with a direct link the CDSS database ([HydroBase](https://cdss.colorado.gov/software/hydrobase)). By providing a 
 list of structures to HydroBase input files can be created and formatted for model input to ensure results are reproducible and easily refreshed for 
 a new study period or database updates.
 
