--- a/mkdocs-project/docs/ModelDescription/31.md
+++ b/mkdocs-project/docs/ModelDescription/31.md
@@ -48,31 +48,31 @@ and wells. It is recommended that the user review the list of water rights as re
 administration numbers as appropriate to trigger based on actual operations. The user can generate a water rights summary (\*.xwr) file by running the 
 **Report Option 4 – Water Rights List**.
 
-<a name="figure1"></a>
+<a name="figure1" alt="StateMod Simulation Step 1 showing calculations and a line diagram"></a>
 ![Step1](31_1.PNG)
 **<p style="text-align: center;">
 Figure 1 - StateMod Simulation Step 1 (<a href="../31_1.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="figure2"></a>
+<a name="figure2" alt="StateMod Simuation Step 2 showing additional calculations and a line diagram"></a>
 ![Step2](31_2.PNG)
 **<p style="text-align: center;">
 Figure 2 - StateMod Simulation Step 2 (<a href="../31_2.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="figure3"></a>
+<a name="figure3" alt="StateMod Simuation Step 3 showing additional calculations and a line diagram"></a>
 ![Step3](31_3.PNG)
 **<p style="text-align: center;">
 Figure 3 - StateMod Simulation Step 3 (<a href="../31_3.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="figure4"></a>
+<a name="figure4" alt="StateMod Simuation Step 4 showing additional calculations and a line diagram"></a>
 ![Step4](31_4.PNG)
 **<p style="text-align: center;">
 Figure 4 - StateMod Simulation Step 4 (<a href="../31_4.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="figure2"></a>
+<a name="figure5" alt="StateMod Simuation Step 5 showing reservoir storage calculations and a line diagram"></a>
 ![Step5](31_5.PNG)
 **<p style="text-align: center;">
 Figure 5 - StateMod Simulation Step 5 (<a href="../31_5.PNG">see also the full-size image</a>)
