--- a/mkdocs-project/docs/OutputDescription/512.md
+++ b/mkdocs-project/docs/OutputDescription/512.md
@@ -14,7 +14,7 @@ prior to filling gaps using a technique such as regression. It contains the foll
 
 Repeat for each River ID and year
 
-<a name="figure1"></a>
+<a name="figure1" alt="Line diagram showing positions of diversion and return with gaged baseflows"></a>
 ![512](512.PNG)
 **<p style="text-align: left;">
 (<a href="../512.PNG">see also the full-size image</a>)
