--- a/mkdocs-project/docs/StandardModelingProcedures/71.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/71.md
@@ -15,10 +15,11 @@ the functionality of each option; a more detailed summary of each option is prov
 recommended to execute options using the menu, options shown in [Table 1](#table1) can be included after the response file in the 
 command line argument and executed using a single command. 
 
-<a name="modelingtip0"></a>
-![modelingtip0](modelingtip0.PNG)
+>**Modeling Tips:**
+>- *Section 2.0 describes the general sequence for developing and operating StateMod, providing guidance on which user option should be run.*
+>- _It is recommended the user perform a data check on modeling scenarios prior to simulation, in order to check for missing data or incorrect file formats. See the *.log file for a summary of warnings/issues for each file._
 
-<a name="figure5"></a>
+<a name="figure5" alt="Model Execution Command Line Example"></a>
 ![71_5](71_5.PNG)
 **<p style="text-align: center;">
 Figure 5 - Model Execution Command Line Example (<a href="../71_5.PNG">see also the full-size image</a>)
@@ -48,7 +49,7 @@ additional parameters are required in order to request the desired report and de
 output command. For example, the user can included `-xdc` following `–rep` in the command line argument to create the Diversion Comparison 
 output file.  A complete list of available report output commands can be found in [Section 5.0](../OutputDescription/50.md).
 
-<a name="figure6"></a>
+<a name="figure6" alt="Menu of available reports"></a>
 ![71_6](71_6.PNG)
 **<p style="text-align: center;">
 Figure 6 - StateMod Report Options (<a href="../71_6.PNG">see also the full-size image</a>)
