--- a/mkdocs-project/docs/StandardModelingProcedures/710.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/710.md
@@ -22,5 +22,8 @@ pumping by wells decreed to be non-tributary (e.g. Coffin Wells). A Special Augm
 depletions, however does not generate an “augmentation requirement” and therefore does not have associated 
 supplies.
 
-<a name="modelingtip11"></a>
-![modelingtip11](modelingtip11.PNG)
+>**Modeling Tips:**
+>* _See the [How to Model Well Operations](../StandardModelingProcedures/77.md) section for information on how to include wells in a StateMod modeling scenario._
+>* _Refer toan existing model, such as the South Platte Model, for more information on how to include augmentation plans and operations in a StateMod model._
+>* _StateMod only accounts for the augmentation requirement and supplies used to offset the requirement; it does not limit well pumping if the supplies are insufficient to meet the full plan demand. The plan demand and supplies are reported in the plan summary (*xpl) file and it is up to teh user to confirm, if appropriate, that the full augmentation requirement is being offset._
+>* _Historical records of recharge supplies are limited in HydroBase, and when available, can be quite variable. The user may consider using a release limit plan to provide an overall limit to all of the recharge supplies, basing the monthly and annual limits on the recent or average total of all recharge supplies._
