--- a/mkdocs-project/docs/StandardModelingProcedures/7101.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7101.md
@@ -34,6 +34,7 @@ and format of this file.
 	* Wells can be tied to multiple augmentation plans if the well right ID is distributed to the multiple 
 	augmentation plans. 
 	
+	<a alt="Example Well augmentation Plan Data (*plw) File"></a>
     ![710_1](710_1_a.PNG)
     **<p style="text-align: left;">
     Example Well Augmentation Plan Data (*.plw) File (<a href="../710_1_a.PNG">see also the full-size image</a>)
