--- a/mkdocs-project/docs/StandardModelingProcedures/7102.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7102.md
@@ -45,11 +45,13 @@ augmentation requirement.
 7. Review the plan summary (\*.xpl) file for information on the total canal loss recharge plan supply and 
 the portion of the augmentation requirement that was offset by the supply. 
 
+<a alt="Example Plan Return (*prf) File"></a>
     ![710_2_a](710_2_a.PNG)
     **<p style="text-align: left;">
     Example Plan Return (*.prf) File (<a href="../710_2_a.PNG">see also the full-size image</a>)
     </p>**
 	
+<a alt="Example Operating Rule (*opr) File"></a>
 	![710_2_b](710_2_b.PNG)
     **<p style="text-align: left;">
     Example Operating Rule (*.opr) File (<a href="../710_2_b.PNG">see also the full-size image</a>)
