--- a/mkdocs-project/docs/StandardModelingProcedures/7103.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7103.md
@@ -87,16 +87,19 @@ of the augmentation requirement that was offset by the supply.
 13.	Review the reservoir summary output (\*.xre) file for output information on the recharge area, including 
 the total supply, evaporation, and the seepage rate.
 
+<a alt="Example Plan Recharge (*plr) File"></a>
     ![710_3_a](710_3_a.PNG)
     **<p style="text-align: left;">
     Example Plan Recharge (*.plr) File (<a href="../710_3_a.PNG">see also the full-size image</a>)
     </p>**
-	
+
+<a alt="Example Reservoir Recharge (*rrf) File"></a>	
 	![710_3_b](710_3_b.PNG)
     **<p style="text-align: left;">
     Example Reservoir Recharge (*.rrf) File (<a href="../710_3_b.PNG">see also the full-size image</a>)
     </p>**
-	
+
+<a alt="Example Operating Rule (*opr) File"></a>	
     ![710_3_c](710_3_c.PNG)
     **<p style="text-align: left;">
     Example Operating Rule (*.opr) File (<a href="../710_3_c.PNG">see also the full-size image</a>)
