--- a/mkdocs-project/docs/StandardModelingProcedures/7106.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7106.md
@@ -23,6 +23,7 @@ well augmentation plan. See [Section 4](../InputDescription/40.md) for more disc
 	versions of the data management interfaces to query for the information and tie that information to the special 
 	well augmentation plan. 
 
+<a alt="Example Well augmentation Plan Data (*plw) File"></a>
     ![710_6_a](710_6_a.PNG)
     **<p style="text-align: left;">
     Example Well Augmentation Plan Data (*.plw) File (<a href="../710_6_a.PNG">see also the full-size image</a>)
