--- a/mkdocs-project/docs/StandardModelingProcedures/711.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/711.md
@@ -16,7 +16,7 @@ correct implementation of a Changed Water Right plan and associated operating ru
 The following schematic provides an example of Changed Water Rights operations; the plan structures and operating 
 rules used to represent these operations are discussed in more detail below.
 
-<a name="figure9"></a>
+<a name="figure9" alt="Changed Water Rights Example Operations"></a>
 ![711_1](711_1.PNG)
 **<p style="text-align: center;">
 Figure 9 - Changed Water Rights Example Operations (<a href="../711_1.PNG">see also the full-size image</a>)
