--- a/mkdocs-project/docs/StandardModelingProcedures/7113.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7113.md
@@ -28,13 +28,13 @@ Additionally, StateMod allows the user to split the return flow obligation to di
 schematic provides an example of return flow obligations operations; the plan structures and operating rules used to represent 
 these operations are discussed in more detail below.
 
-<a name="figure10"></a>
+<a name="figure10" alt="Terms and Conditions Plan Example Operations"></a>
 ![711_3_a](711_3_a.PNG)
 **<p style="text-align: center;">
 Figure 10 - Terms and Conditions Plan Example Operations (<a href="../711_3_a.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="figure10_b"></a>
+<a name="figure10_b" alt="Example T&C Return Pattern Information"></a>
 ![711_3_b](711_3_b.PNG)
 **<p style="text-align: center;">
 Example T&C Return Pattern Information (<a href="../711_3_b.PNG">see also the full-size image</a>)
@@ -49,7 +49,7 @@ Enter the appropriate location and structure information and designate the struc
 3. In the plan file (\*.pln), include the well augmentation plan as a Type 1 Plan and include the appropriate parameter information. 
 See [Section 4](../InputDescription/40.md) for more discussion on the information in and format of this file.	
 
-    <a name="figure10_c"></a>
+    <a name="figure10_c" alt="Example Plan (.pln) File"></a>
     ![711_3_c](711_3_c.PNG)
     **<p style="text-align: center;">
     Example Plan (.pln) File (<a href="../711_3_c.PNG">see also the full-size image</a>)
@@ -67,7 +67,7 @@ format of this file.
 	* In the example below, the full T&C plan is split 46/54 percent to two sub-plans (`Loc1_RF` and `Loc2_RF`). Each sub-plan has a 
 	standard and fixed return flow pattern; see below for discussion on the Table values for each.
 
-    <a name="figure10_d"></a>
+    <a name="figure10_d" alt="Example Plan Return (*.prf) File"></a>
     ![711_3_d](711_3_d.PNG)
     **<p style="text-align: center;">
     Example Plan Return (*.prf) File (<a href="../711_3_d.PNG">see also the full-size image</a>)
@@ -78,7 +78,7 @@ standard and fixed return flow obligations, respectively.  See [Section 4](../In
 information in and format of this file.
 	* The lagged return flows are generally decreed in the change of use decree. 
 
-    <a name="figure10_e"></a>
+    <a name="figure10_e" alt="Return Flow File (*.urm/*.dly)"></a>
     ![711_3_e](711_3_e.PNG)
     **<p style="text-align: center;">
     Return Flow File (\*.urm/\*.dly) (<a href="../711_3_e.PNG">see also the full-size image</a>)
@@ -92,7 +92,7 @@ right plan to a demand.
 	* Specific to the T&C plan, include the plan ID in the `ciopso(2)` field and include the CU Factors if a standard return 
 	flow pattern is being simulated.
 
-    <a name="figure10_f"></a>
+    <a name="figure10_f" alt="Operating Rule File (*.opr)"></a>
     ![711_3_f](711_3_f.PNG)
     **<p style="text-align: center;">
     Operating Rule File (*.opr) (<a href="../711_3_f.PNG">see also the full-size image</a>)
