--- a/mkdocs-project/docs/StandardModelingProcedures/713.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/713.md
@@ -16,7 +16,7 @@ right-click to `Add an Upstream Location`, and add a diversion structure that wi
 	a box around the diversion structure in the network diagram, but it is used for visual representation only, and is not used 
 	by StateDMI when creating files or by StateMod.  
 
-    <a name="section13_a"></a>
+    <a name="section13_a" alt="Visual example of the Is Import? box"></a>
     ![713_a](713_a.PNG)
 
 2.	In the network (\*.net) in StateDMI, right-click to `Add an Upstream Location`, and add a plan structure directly downstream of 
@@ -25,7 +25,7 @@ the import diversion structure that will serve as the import plan.
 4.	In the plan file (\*.pln), include the import diversion structure as a Type 7 Import Plan (must be same model identifier) and 
 the import plan structure as a Type 11 Accounting Plan. 
 
-    <a name="section13_b"></a>
+    <a name="section13_b" alt="Example Operating Rule File"></a>
     ![713_b](713_b.PNG)
     **<p style="text-align: center;">
     Example Operating Rule (*.opr) File (<a href="../713_b.PNG">see also the full-size image</a>)
