--- a/mkdocs-project/docs/StandardModelingProcedures/714.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/714.md
@@ -36,5 +36,5 @@ with the use of the reusable supplies.
 * Include a Plan Spill Type 29 operating rule for all non-reservoir reuse plans.
 * Review the plan summary (\*.xpl) file to review the amount of reusable supplies stored and released from each plan.
 
-<a name="modelingtip12"></a>
-![modelingtip12](modelingtip12.PNG)
+>**Modeling Tips:**
+>* _The functionality associated with the evaporation and releases from reservoir reuse plans has not been thoroughly tested or vetted; it is up to the user to verify these operations are simulating as desired._
