--- a/mkdocs-project/docs/StandardModelingProcedures/715.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/715.md
@@ -8,11 +8,12 @@ call to extend upstream in these reaches.
 1. In the river network (\*.rin) file, add a river node downstream of where a futile call occurs and keep the downstream location 
 (`cstadn`) blank. 
 
-    <a name="section15_a"></a>
+    <a name="section15_a" alt="Example River Network (*rin) File with Futile Call"></a>
     ![715_a](715_a.PNG)
     **<p style="text-align: center;">
     Example River Network (*.rin) File with Futile Call (<a href="../715_a.PNG">see also the full-size image</a>)
     </p>**
 	
-<a name="modelingtip13"></a>
-![modelingtip13](modelingtip13.PNG)
+>**Modeling Tips:**
+>* _The river network (*rin) file isgenearlly created using StateDMI commands; this operation requires editing this file in a text editor. If so, these revisions will not be captured in a commands file and may be overwritten if the river network (*rin) file is recreated using StateDMI commands._
+>* _This functionality has not been thoroughly tested or vetted; it is up to the user to verify these operations are simulating as desired._
