--- a/mkdocs-project/docs/StandardModelingProcedures/7161.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7161.md
@@ -23,7 +23,7 @@ for providing supplies that offset the OOP obligation. An OOP plan should be inc
 OOP Plan is modeled as `364512OOPPLN`. The OOP plan is included in the network (\*.net) diagram, river network file (\*.rin), and the plan file 
 (\*.pln). 
 
-    <a name="section161_a"></a>
+    <a name="section161_a" alt="Colorado River Basin Model - Plan (*.pln) File Exerpt"></a>
     ![7161_a](7161_a.PNG)
     **<p style="text-align: center;">
     Colorado River Basin Model - Plan (*.pln) File Excerpt (<a href="../7161_a.PNG">see also the full-size image</a>)
@@ -33,7 +33,7 @@ OOP Plan is modeled as `364512OOPPLN`. The OOP plan is included in the network (
 Dillon Reservoir, shown below, has specific accounts used to manage the OOP bookover operations, these accounts are not tied to any other 
 users of the reservoir.
 
-    <a name="section161_b"></a>
+    <a name="section161_b" alt="Colorado River Basin Model - Reservoir Station File Excerpt"></a>
     ![7161_b](7161_b.PNG)
     **<p style="text-align: center;">
     Colorado River Basin Model – Reservoir Station (*.res) File Excerpt (<a href="../7161_b.PNG">see also the full-size image</a>)
@@ -50,7 +50,7 @@ users of the reservoir.
 		* The priority of the operating rule is set senior to the Green Mountain storage right, allowing it to simulate prior to storage 
 		in Green Mountain Reservoir.
 
-<a name="section161_c"></a>
+<a name="section161_c" alt="Colorado River Basin Model - Type 38 Rule Example"></a>
 ![7161_c](7161_c.PNG)
 **<p style="text-align: center;">
 Colorado River Basin Model – Type 38 Rule Example (<a href="../7161_c.PNG">see also the full-size image</a>)
@@ -63,7 +63,7 @@ right, it reduces the OOP obligation owed by Denver and Colorado Springs proport
 out-of-priority operations are complete which allows for a pro rata amount to be credited to each of the four out-of-priority plans. When 
 the amount stored under this right equals out-of-priority operations by both cities, the right is satisfied.
 
-<a name="section161_d"></a>
+<a name="section161_d" alt="Colorado River Basin Model - Type 41 Rule Example"></a>
 ![7161_d](7161_d.PNG)
 **<p style="text-align: center;">
 Colorado River Basin Model – Type 41 Rule Example (<a href="../7161_d.PNG">see also the full-size image</a>)
@@ -79,17 +79,18 @@ Fork Reservoir each have two accounts to which Denver can transfer water for rep
 during substitution years using the bookover operations (Type 34 and 6), however if these supplies are not sufficient, Dillon Reservoir 
 can release directly to Green Mountain Reservoir via the Type 27 operating rule.
 
-<a name="section161_e"></a>
+<a name="section161_e" alt="Colorado River Basin Model - Documentation Excerpt"></a>
 ![7161_e](7161_e.PNG)
 **<p style="text-align: center;">
 Colorado River Basin Model – Documentation Excerpt (<a href="../7161_e.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="section161_f"></a>
+<a name="section161_f" alt="Colorado River Basin Model – Type 34 Rule Example"></a>
 ![7161_f](7161_f.PNG)
 **<p style="text-align: center;">
 Colorado River Basin Model – Type 34 Rule Example (<a href="../7161_f.PNG">see also the full-size image</a>)
 </p>**
 
-<a name="modelingtip14"></a>
-![modelingtip14](modelingtip14.PNG)
+>**Modeling Tips:**
+>* _If the suer is interested in setting up an OOP operation, download the full Upper Colorado River StateMod Model from the CDSS website and use it an example._
+>* _Section 5.9.18 in the Upper Colorado River Basin Water Resources Planning Model User's Manual provides more information on the Blue River Decree Operations._
