--- a/mkdocs-project/docs/StandardModelingProcedures/7162.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7162.md
@@ -53,5 +53,5 @@ the Conejos River instream flow demand.
 7. Review the instream flow summary (\*.xir) file for information on instream flow demands and the portion of the demand met based on the 
 Type 17 and 18 operations.
 
-<a name="modelingtip15"></a>
-![modelingtip15](modelingtip15.PNG)
+>**Modeling Tips:**
+>* _It is recommended the user research the full Rio Grande Compact requirements prior to implementing the operations in StateMod. This particularly applies to understanding and implementing the correct forecasted demand._
