--- a/mkdocs-project/docs/StandardModelingProcedures/7163.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7163.md
@@ -61,7 +61,7 @@ available.
 	* The source is the Compact plan and the destination is the diversion structure ID.
 	* Include carriers with losses, if applicable.
 
-    <a name="section163_a"></a>
+    <a name="section163_a" alt="South Platte River Basin Model – Compact Operations Example"></a>
     ![7163_a](7163_a.PNG)
     **<p style="text-align: center;">
     South Platte River Basin Model – Compact Operations Example (<a href="../7163_a.PNG">see also the full-size image</a>)
