--- a/mkdocs-project/docs/StandardModelingProcedures/7164.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7164.md
@@ -47,7 +47,7 @@ percentages used to calculate the Compact instream flow demand.
 	flow plus any lagged returns to the gage from upstream diversions in a prior time step multiplied by the specified percent 
 	(e.g. 50%).
 
-    <a name="section164_a"></a>
+    <a name="section164_a" alt="San Juan River Basin Model – Compact Operations Example"></a>
     ![7164_a](7164_a.PNG)
     **<p style="text-align: center;">
     San Juan River Basin Model – Compact Operations Example (<a href="../7164_a.PNG">see also the full-size image</a>)
