--- a/mkdocs-project/docs/StandardModelingProcedures/7171.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/7171.md
@@ -42,5 +42,5 @@ estimate daily data.
 	* Daily return file (\*.dld) file.
 	* Daily Consumptive Requirement (\*.ddx) file if variable efficiency is simulated.
 
-<a name="modelingtip16"></a>
-![modelingtip16](modelingtip16.PNG)
+>**Modeling Tip:**
+>* _Daily modeling options are complex and all functionality has not been thoroughly tested or vetted; it is up to the user to verify these operations are simulating as desired._
