--- a/mkdocs-project/docs/StandardModelingProcedures/72.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/72.md
@@ -17,11 +17,11 @@ $$\text{Natural Flow at Gaged Locations} =
 
 \\(\text{Natural Flow} = 200 + 100 - 40 = 260\\)
 
-<a name="figure6_a"></a>
+<a name="figure6_a" alt="Line Diagram showing 100% diversion resulting in 60% CU, with blanks for return flow and gage amounts"></a>
 ![72_6_a](72_6_a.PNG)
 
-<a name="modelingtip1"></a>
-![modelingtip1](modelingtip1.PNG)
+**Modeling Tip:**
+* _There are several complete StateMod datasets available on the CDSS website. It is recommended the user download an existing dataset to use as a template and to assist with trouble shooting._*
 
 The following steps are recommended to develop a scenario to estimate Baseflow:
 
@@ -104,7 +104,7 @@ The general baseflow formula described above is typically implemented with discr
 product of drainage area and average annual precipitation. [Figure 7](#figure7) illustrates a hypothetical basin and the areas associated with each of 
 three gages and an ungaged location.
 
-<a name="figure7"></a>
+<a name="figure7" alt="Hypothetical Basin Illustration with subbasins, nodes for ungaged baseflows, and gage locations"></a>
 ![72_7](72_7.PNG)
 **<p style="text-align: center;">
 Figure 7 - Hypothetical Basin Illustration (<a href="../72_7.PNG">see also the full-size image</a>)
@@ -148,8 +148,10 @@ the gains along the main stem. For example, a small ungaged tributary that peaks
 neighboring gage approach with a streamgage in a similar watershed. The user is responsible for ensuring that the overall reach water balance 
 is maintained when using the neighboring gage approach. 
 
-<a name="modelingtip2"></a>
-![modelingtip2](modelingtip2.PNG)
+>**Modeling Tips:**
+>- _Use the "gain approach" at an ungaged location that is dominated by upstream gaged flows or when the ungaged location has a relatively large drainage area when compared to the downstream gaged data's drainage area._
+>- _Use the "neighboring gage approach" when the ungaged locations' drainage area is relatively small when compared to the downstream gaged location's drainage area. Note, when the neighboring gage approach is taken, the modeler is, in effect, adding a "new" gage. Therefore, when this approach is implemented, care must be exercises toensure the gain coefficients (coefG) and proration factor (pf) accurately account for this 'new' gage and its associated drainage area._
+
 
 The following steps are recommended to develop a scenario to distribute baseflow to ungaged locations:
 
