--- a/mkdocs-project/docs/StandardModelingProcedures/722.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/722.md
@@ -41,8 +41,9 @@ imports, and return flows in the upstream reach be analyzed.  In some situations
 routed return flows, incorrect locations of diversions (above/below the gage), problems with physical representation of the basin, 
 or imports that are included in the natural flow estimates.
 
-<a name="modelingtip3"></a>
-![modelingtip3](modelingtip3.PNG)
+>**Modeling Tip:**
+>* _It is recommended that the user address any negative natural flow or losing reach issues prior to distributing the natural flow gains (or losses) to ungaged locations._
+
 
 **Situation**: More than 100 percent of the natural flow gains between gages are distributed to an ungaged location, 
 resulting in “created” water and a “losing reach” at the downstream gage.  Gains are distributed to ungaged locations 
@@ -60,5 +61,5 @@ locations.
 * The gain approach assigns the distribution of gains for main stem gages to tributary gages. This may not be an adequate 
 representation, in which case the neighboring gage should be used.
 
-<a name="modelingtip4"></a>
-![modelingtip4](modelingtip4.PNG)
+>**Modeling Tip:**
+>* _Once the natural flow at gaged and ungaged locations have been checked for the situations discussed above, they are used as the natural flow input to subsequent simulation models. Additional adjustment to the natural flows may be necesary pending the results of a Historical Calibration scenario._
