--- a/mkdocs-project/docs/StandardModelingProcedures/747.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/747.md
@@ -73,5 +73,5 @@ on lands with sprinklers but still divert surface water to meet both CIR and rec
 Note that the Supply Demand Approach (`icondem = 4`) and Decreed Demand Approach (`icondem = 5`) could be extended to assist in 
 determining when to use reservoir supplies (i.e. only make a reservoir release if a CIR exists). 
 
-<a name="modelingtip6"></a>
-![modelingtip6](modelingtip6.PNG)
+>**Modeling Tip:**
+>* _Co-mingled demand options are complex and all functionality as not been thoroughly tested or vetted; it is up to the user to verify these operations are simulation as desired._
