--- a/mkdocs-project/docs/StandardModelingProcedures/75.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/75.md
@@ -6,11 +6,12 @@ the reservoir station file (\*.res), reservoir right file (\*.rer), reservoir ta
 (\*.eva), and the operating rule file (\*.opr). StateMod simulates operations of reservoirs in the model based on 
 the input from these files. 
 
-<a name="figure8"></a>
+<a name="figure8" alt="reservoir operations"></a>
 ![75_1](75_1.PNG)
-**<p style="text-align: center;">
+<p style="text-align: center;">
 Figure 8 - Reservoir Operations Illulstration (<a href="../75_1.PNG">see also the full-size image</a>)
-</p>**
+</p>
 
-<a name="modelingtip7"></a>
-![modelingtip7](modelingtip7.PNG)
+**Modeling Tips:**
+* _This section is not all-inclusive and does not provide instructions for more complex reservoir operations. If the user needs to implement a change or addition not discussed herein, it is recommended the user refer to the completed CDSS StateMod models available on the CDSS website for examples of how to implement more complex reservoir operations._ 
+* _Review the Colorado DWR General Administrative Guidelines for Reservoirs (Oct. 2011) for more information on the terminology used and impact of specific parameters in the reservoir files._
