--- a/mkdocs-project/docs/StandardModelingProcedures/76.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/76.md
@@ -15,11 +15,10 @@ allow:
 * Return flows to be accounted for at the correct locations and operated either by variable efficiency 
 (for irrigation structures) or by a constant efficiency (for carrier structures).
 
-<a name="figure9"></a>
+<a name="figure9" alt="Off-Channel Reservoir System Schematic: 1. River Diversion 2. Carrier Return Flow 3. Off-Channel Reservoir 4. Off-Channel Demand 5. Demand Return Flow"></a>
 ![76_1](76_1.PNG)
-**<p style="text-align: center;">
-Figure 9 - Off-Channel Reservoir System Schematic (<a href="../76_1.PNG">see also the full-size image</a>)
-</p>**
+**<p style="text-align: center;">Figure 9 - Off-Channel Reservoir System Schematic (<a href="../76_1.PNG">see also the full-size image</a>)**
+</p>
 
 **River Network Setup**
 The off-channel system is represented as a “mock” tributary in the network diagram and connected to the network 
@@ -73,8 +72,13 @@ based on change in reservoir end-of-month content from one month to the next and
 * Return flow location(s), percentage(s), and delay pattern(s) in the direct diversion station (\*.dds) file for this 
 structure are based on locations of returns from the use. *This is represented by Location 5.*
 
-<a name="modelingtip8"></a>
-![modelingtip8](modelingtip8.PNG)
+>**Modeling Tips:**
+>* _If the off-channel system is modeled correctly and all the diversion and reservoir data is consistent, the natural flow for the off-channel tributary would be zero._
+>* _If there are data inconsistencies between diversion and reservoir data or the system is not represented correctly in the model, StateMod will estimate natural flow from this tributary._
+>* _Use a "calibration" streamflow gage (a streamflow gage with zero streamflow) at the bottom of the "mock" tributary to determine if there is natural flow being estimated for the off-channel system._
+>* _Once data inconsistencies are corrected and the estimate of natural flow at the calibration gage is minimal/zero, the gage needs to be removed from the network (or set to an Other structure type) before simulation scenarios are run._
+
+
 
 **Simulation Scenarios**
 
