--- a/mkdocs-project/docs/StandardModelingProcedures/774.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/774.md
@@ -40,5 +40,6 @@ file variable `gwmode` is set to 1 and the control file (\*.ctl) variables are s
 follows: `itsfile = 10`, `ieffmax = 1`, `isprnk = 1`. If any of the above are not set 
 appropriately the Mutual Supply approach is used.  
 
-<a name="modelingtip9"></a>
-![modelingtip9](modelingtip9.PNG)
+>**Modeling Tips:**
+>* _See StateCU Consumptive Use Model User's Manual for additional discussion on Mutual and Maximum Supply Options._
+>* _This functionality has not been thoroughly tested or vetted; it is up to the user to verify these operations are simulating as desired._
