--- a/mkdocs-project/docs/StandardModelingProcedures/78.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/78.md
@@ -40,5 +40,11 @@ omitted; they are no longer used in StateMod.
 
 **Type 13 – Changed Water Rights Plan** is a specific type of accounting plan that is used to handle changed water right operations, allowing water to be “temporarily diverted” in priority, split to other Type 13 plans if the changed right has more than one owner, then released at a later priority to meet demands.  
 
-<a name="modelingtip10"></a>
-![modelingtip10](modelingtip10.PNG)
+
+>**Modeling Tips:**
+>* _See the [How to Model Changed Water Rights and Return Flow Obligations](../StandardModelingProcedures/711.md) section for more information on Plan Types 1 and 13._
+>* _See the [How to Model Imported Water](../StandardModelingProcedures/713.md) section for more information on Plan Type 7._
+>* _See the [How to Model Reusable Supplies](../StandardModelingProcedures/714.md) section for more information on Plan Types 3 and 4._
+>* _See the [How to Model Augmentation Plans](../StandardModelingProcedures/710.md) section for more information on Plan Types 2, 8, and 10._
+>* _See the [How to Model a Release Limit Plan](../StandardModelingProcedures/79.md) section for more information on Plan Type 12._
+>* _See the [Basin-Specific Operations and Compacts](../StandardModelingProcedures/716.md) section for more information on Plan Type 9 and 11._
