--- a/mkdocs-project/docs/SupportingUtilities/85.md
+++ b/mkdocs-project/docs/SupportingUtilities/85.md
@@ -8,4 +8,4 @@ The TSTool DMI provides the following assistance to the StateMod Model:
 * Fills missing EOM data from user supplied parameters. 
 * Extracts precipitation and evaporation data to build the net evaporation file (\*.eva) for StateMod.
 
-For a complete description of the TSTool DMI see [CDSS web site](https://www.colorado.gov/pacific/cdss/tstool). 
+For a complete description of the TSTool DMI see [CDSS web site](https://cdss.colorado.gov/software/tstool). 
