--- a/mkdocs-project/docs/SupportingUtilities/86.md
+++ b/mkdocs-project/docs/SupportingUtilities/86.md
@@ -4,4 +4,4 @@ The StateCU Model provides the following assistance to the StateMod Model:
 
 Provides irrigation water requirement data for estimating irrigation structure efficiencies and calculated demands (as opposed to historic diversions).
 
-For a complete description of the StateCU Model see [CDSS web site](https://www.colorado.gov/pacific/cdss/statecu).  
+For a complete description of the StateCU Model see [CDSS web site](https://cdss.colorado.gov/software/statecu).  
