--- a/mkdocs-project/docs/OutputDescription/55.md
+++ b/mkdocs-project/docs/OutputDescription/55.md
@@ -2,5 +2,5 @@
 
 StateMod prints a variable number of direct access binary output files, depending on the types of structures and time step (monthly or daily) being simulated. 
 This section describes the contents of the three major structure types (direct diversion, reservoir, and wells) for both monthly and daily time steps. Note that the 
-binary files can be accessed using TSTool; see the TSTool documentation available on the [CDSS website](http://www.colorado.gov/cdss) for more information. 
+binary files can be accessed using TSTool; see the TSTool documentation available on the [CDSS website](https://cdss.colorado.gov/) for more information. 
 
