--- a/mkdocs-project/docs/StandardModelingProcedures/74.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/74.md
@@ -16,7 +16,7 @@ contains command files and supporting files used to create the StateMod input fi
 (e.g. diversion station (\*.dds) and diversion rights (\*.ddr) file). The actual input files are stored in StateMod 
 folder. The DocSW folder includes the StateMod model documentation.
 
-<a name="figure7_2"></a>
+<a name="figure7_2" alt="CDSS Directory Structure - Local Disk C then CDSS, then Data, then Model Name, then additional folders"></a>
 ![74_1](74_1.PNG)
 
 [Table 2](#table2) is a quick guide to assist the user as to which files and tools should be revised, or at a minimum reviewed, 
@@ -59,5 +59,6 @@ Table 2 - Quick Guide for Modifying StateMod Data Set Input Files
 | Model Scenario Files ..\StateMod\	| Response File (\*.rsp) 					| Edit in text editor
 | 									| Control File (\*.ctl) 					| Edit in text editor 
 
-<a name="modelingtip5"></a>
-![modelingtip5](modelingtip5.PNG)
+>**Modeling Tips:**
+>- _This section is not all-inclusive and does not provide instructions for more complex changes or additions. If the user needs to implement a change or addition not discussed herein, it is recommended the user refer to the completed CDSS StateMod models available on the CDSS website for examples of how to implement more complex changes._
+>- _StateMod output files reflect the same filename as the response file (*.rsp); use descriptive response file names to manage different scenarios and for easier comparisons._
