--- a/mkdocs-project/docs/SupportingUtilities/84.md
+++ b/mkdocs-project/docs/SupportingUtilities/84.md
@@ -23,4 +23,4 @@ provided by the CU model, StateCU (see below).
 by the CU model, StateCU (see below). 
 * Extracts irrigated acreage and crop mix (\*.cds) data from the CDSS database.
 
-For a complete description of the StateDMI see [CDSS web site](https://www.colorado.gov/pacific/cdss/statedmi). 
+For a complete description of the StateDMI see [CDSS web site](https://cdss.colorado.gov/software/statedmi). 
