Update for accessibility issues

--- a/mkdocs-project/docs/StandardModelingProcedures/746.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/746.md
@@ -4,7 +4,7 @@
 the monthly demand or read in an external StateMod formatted file (\*.stm) with the demand.
 2.	For reservoir demand: Edit the reservoir demand file (\*.tar) using the TSTool commands and either set the 
 minimum/maximum monthly demands or read in an external StateMod formatted file (\*.stm) with the demands.
-	* See [Section 4](..\InputDescription\40.md) for information on flood control operations (e.g. use of “-1” in the target file)
+	* See [Section 4](../InputDescription/40.md) for information on flood control operations (e.g. use of “-1” in the target file)
 3.	For instream flow demand: Edit the instream flow demand file (\*.ifa/*.ifm) using the TSTool commands and 
 either set the monthly demand or read in an external StateMod formatted file (\*.stm) with the demand.
 	* Use a monthly instream flow demand file (\*.ifm) to input a demand for each month in the simulation period.
