--- a/mkdocs-project/docs/StandardModelingProcedures/752.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/752.md
@@ -2,7 +2,7 @@
 
 StateMod has several operating rules that allow water to be released from a reservoir to a direct flow 
 diversion, including operating rule Types 2, 3, 4, 10, 11 and 14. See the Operating Rules Decision Tree 
-in [Section 4](..\InputDescription\413.md) for all operating rules associated with reservoirs. 
+in [Section 4](../InputDescription/413.md) for all operating rules associated with reservoirs. 
 
 * Releases are limited to available water in the source reservoir and account, the capacity of the diversion 
 structure, the downstream channel capacity, and the structure demand. For operating rules that release via 
