--- a/mkdocs-project/docs/StandardModelingProcedures/754.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/754.md
@@ -20,7 +20,7 @@ of the account capacity compared to the full capacity.
 amounts in model output, include the “re-distribution” Type 6 operating rule ID in the initial bookover 
 operating rules to stop the re-operation once the “re-distribution” operating rule triggers.  See additional 
 discussion on this functionality using the `ciopso(2)` and `OprLimit` flags in the Type 6 operating rule in 
-[Section 4.13.6](..\InputDescription\4136.md).
+[Section 4.13.6](../InputDescription/4136.md).
 * Re-distribution can also be used to reflect a specific order in which the accounts should be filled. 
 To do so, first fill a larger bookover account with the reservoir rights and use Type 6 operating rules to 
 bookover the stored water into smaller accounts using appropriate priorities to control the order accounts 
