--- a/mkdocs-project/docs/StandardModelingProcedures/753.md
+++ b/mkdocs-project/docs/StandardModelingProcedures/753.md
@@ -24,5 +24,5 @@ and calls standard StateMod subroutines that control a direct reservoir release 
 exchange (**`DivrplP`**). Therefore reservoir operations are exactly the same when a reservoir operates as a 
 replacement reservoir as they are when the reservoir operates as a standard reservoir.
 * Total releases from a replacement reservoir can be limited to monthly or annual volumetric limits using a 
-Release Limit Plan. See below for additional plan operations or [Section 4.49](..\InputDescription\449.md) for 
+Release Limit Plan. See below for additional plan operations or [Section 4.49](../InputDescription/449.md) for 
 Release Limit Plans (Plan Type 12).
